--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 
+ <script src="https://www.paypal.com/sdk/js?client-id=ATbZWnQPtN92C7JSvyZ49Qi9Y-5E571scEwxjsqoxfbp-vTuegC67g-m5Dx081k-P99I_Y9JfqsMnLSp"></script>
 
 
     <!--
@@ -33,6 +34,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+   
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
