--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/MCCLOGO.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="MATTHEW CAR WASH"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/MCCLOGO.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -17,6 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 
+    <!-- est client id -->
  <script src="https://www.paypal.com/sdk/js?client-id=ATbZWnQPtN92C7JSvyZ49Qi9Y-5E571scEwxjsqoxfbp-vTuegC67g-m5Dx081k-P99I_Y9JfqsMnLSp"></script>
 
 
